# djangoapp

./: .gitignore  pyproject.toml  pytests.ini
authentication/: models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_role.py
companies/: models.py  urls.py  views.py
companies/migrations/: 0001_initial.py
djangoapp/: settings.py  urls.py
tests/: conftest.py  factories.py  fixtures.py
tests/vacancies/: vacancy_create_test.py  vacancy_list_test.py  vacancy_retrieve_test.py
vacancies/: apps.py  models.py  permissions.py  serialaizer.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py  0004_alter_skill_options_alter_vacancy_options.py  0005_skill_is_active.py  0006_vacancy_likes.py  0007_vacancy_min_expierence.py  0008_rename_min_expierence_vacancy_min_experience_and_more.py
